force-app/main/default/objects/Registration_Line_Item__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Registration Line Items</relationshipLabel>
    <relationshipName>Registration_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>