force-app/main/default/objects/Registration_Line_Item__c/fields/No_Show__c.field-meta.xml
<CustomField>
    <fullName>No_Show__c</fullName>
    <label>No Show</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>