force-app/main/default/objects/Registration_Line_Item__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>Event_Session__c</referenceTo>
    <relationshipLabel>Registration Line Items</relationshipLabel>
    <relationshipName>Registration_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>