force-app/main/default/objects/Registration_Line_Item__c/fields/Session_Code__c.field-meta.xml
<CustomField>
    <fullName>Session_Code__c</fullName>
    <formula>Session__r.Session_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Code</label>
    <type>Text</type>
</CustomField>