force-app/main/default/objects/Registration_Line_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Session</fullName>
            </value>
            <value>
                <fullName>Cafe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>