force-app/main/default/objects/Registration_Line_Item__c/listViews/BTB23.listView-meta.xml
<ListView>
    <fullName>BTB23</fullName>
    <columns>Registration__c</columns>
    <columns>NAME</columns>
    <columns>Cost__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Event_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Name__c</field>
        <operation>equals</operation>
        <value>CDG - Beyond the Beltway 2023</value>
    </filters>
    <label>BTB23</label>
</ListView>