force-app/main/default/objects/Registration_Line_Item__c/listViews/SOTCA25.listView-meta.xml
<ListView>
    <fullName>SOTCA25</fullName>
    <columns>Registration__c</columns>
    <columns>NAME</columns>
    <columns>Cost__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Event_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Name__c</field>
        <operation>equals</operation>
        <value
    >IICA - State of Technology - California Industry Forum 2025</value>
    </filters>
    <label>SOTCA25</label>
</ListView>