force-app/main/default/objects/Registration_Line_Item__c/listViews/SOTTX25.listView-meta.xml
<ListView>
    <fullName>SOTTX25</fullName>
    <columns>Registration__c</columns>
    <columns>NAME</columns>
    <columns>Cost__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Event_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Name__c</field>
        <operation>equals</operation>
        <value>IITX - State of Technology - Texas Industry Forum 2025</value>
    </filters>
    <label>SOTTX25</label>
</ListView>